(lang dune 3.18)

(name dia)

(generate_opam_files true)

(source
 (github dia-language/dia))

(authors "Ch1keen <contact@ch1keen.xyz>")

(maintainers "Ch1keen <contact@ch1keen.xyz>")

(license GPLv3)

;(documentation https://url/to/documentation)

(package
 (name dia)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (allow_empty)
 (tags
  ("add topics" "to describe" your project)))
